add pics over control

--- a/comics.html
+++ b/comics.html
@@ -21,7 +21,11 @@
 	<p><input id="reset" type="button" value="reset" onclick="resettxt()"></p>
 </form>
 
-<div id="pics">
+<div class="pics_over_control">
+    <div id="pics"></div>
+    
+    <a class="p_over_p" href="#" onclick="fprev();return false;"></a>
+    <a class="p_over_n" href="#" onclick="fnext();return false;"></a>
 </div>
 
 
