--- a/comics.html
+++ b/comics.html
@@ -5,32 +5,29 @@
     <script src="comics.js"></script>
 </head>
 <body onload="stateload()">
-<form id="form" action="" method="POST">
-    <p>filename:<input id="filename" type="text" name="filename"></p>
-    <p>pages:<input id="pages" type="text" name="pages" value="1" style="width:20px;"></p>
-    <p><input id="send" type="button" value="open" onclick="ziporrar()"></p>
-    <p><input id="prev" type="button" value="prev" onclick="fprev()"></p>
-    <p><input id="next" type="button" value="next" onclick="fnext()"></p>
-	<p><input id="save" type="button" value="save" onclick="statesave()"></p>
-	<p><input id="load" type="button" value="load" onclick="stateload()"></p>
-	<p>for txt only:</p>
-	<p>start:<input id="start" type="text" name="start" value="1" style="width:20px;"></p>
-    <p>lines:<input id="lines" type="text" name="lines" value="10" style="width:20px;"></p>
-	<p><input id="txt-h" type="radio" name="txt_hv" checked value=h>horizonal</p>
-	<p><input id="txt-v" type="radio" name="txt_hv" value=v>vertical</p>
-	<p><input id="reset" type="button" value="reset" onclick="resettxt()"></p>
-</form>
+    <div class="left_menu">
+        <div class="left_menu_title">File List</div>
+    </div>
+    <form class="form" id="form" action="" method="POST">
+        <p>filename:<input id="filename" type="text" name="filename"></p>
+        <p>pages:<input id="pages" type="text" name="pages" value="1" style="width:20px;"></p>
+        <p><input id="send" type="button" value="open" onclick="ziporrar()"></p>
+        <p><input id="prev" type="button" value="prev" onclick="fprev()"></p>
+        <p><input id="next" type="button" value="next" onclick="fnext()"></p>
+	    <p><input id="save" type="button" value="save" onclick="statesave()"></p>
+	    <p><input id="load" type="button" value="load" onclick="stateload()"></p>
+	    <p>for txt only:</p>
+	    <p>start:<input id="start" type="text" name="start" value="1" style="width:20px;"></p>
+        <p>lines:<input id="lines" type="text" name="lines" value="10" style="width:20px;"></p>
+	    <p><input id="txt-h" type="radio" name="txt_hv" checked value=h>horizonal</p>
+	    <p><input id="txt-v" type="radio" name="txt_hv" value=v>vertical</p>
+	    <p><input id="reset" type="button" value="reset" onclick="resettxt()"></p>
+    </form>
 
-<div class="pics_over_control">
-    <div id="pics"></div>
-    
-    <a class="p_over_p" href="#" onclick="fprev();return false;"></a>
-    <a class="p_over_n" href="#" onclick="fnext();return false;"></a>
-</div>
-
-
-
+    <div class="pics_over_control">
+        <div id="pics"></div>
+        <a class="p_over_p" href="#" onclick="fprev();return false;"></a>
+        <a class="p_over_n" href="#" onclick="fnext();return false;"></a>
+    </div>
 </body>
-
-
 </html>
