setting item list

--- a/comics.html
+++ b/comics.html
@@ -4,9 +4,10 @@
     <link href="comics.css" rel="stylesheet" type="text/css">
     <script src="comics.js"></script>
 </head>
-<body onload="stateload()">
+<body onload="first_load()">
     <div class="left_menu">
         <div class="left_menu_title">File List</div>
+        <div class="left_menu_item" id="filelist"></div>
     </div>
     <form class="form" id="form" action="" method="POST">
         <p>filename:<input id="filename" type="text" name="filename"></p>
