controle height on load text

--- a/comics.html
+++ b/comics.html
@@ -30,7 +30,7 @@
     </form>
 
     <div class="pics_over_control">
-        <div id="pics"></div>
+        <div class="pics" id="pics"></div>
         <a class="p_over_p" href="#" onclick="fprev();return false;"></a>
         <a class="p_over_n" href="#" onclick="fnext();return false;"></a>
     </div>
